--- a/ui/admin/game_list_admin.html
+++ b/ui/admin/game_list_admin.html
@@ -178,7 +178,9 @@
       <h1>🛠️ 관리자 페이지</h1>
     </div>
     <div class="header-right">
-      <button>관리자 홈</button>
+      <button>
+        <a href="admin_page.html">관리자페이지</a>
+      </button>
       <button>
         <a href="../both/first.html">로그아웃</a>
       </button>
@@ -200,7 +202,7 @@
       <div class="game-info">
         <h3>엘든 링</h3>
         <p>장르: 액션 RPG</p>
-        <p class="price">₩64,800</p>
+        <p class="price">₩67,770</p>
       </div>
       <div class="button-group">
         <button class="edit-btn">✏️ 게임정보수정</button>
