--- a/ui/users/game_list_user.html
+++ b/ui/users/game_list_user.html
@@ -178,7 +178,7 @@
     </div>
     <div class="header-right">
       <button>
-        <a href="mypage.html">마이페이지</a>
+        <a href="my_page.html">마이페이지</a>
       </button>
       <button>
         <a href="../both/first.html">로그아웃</a>
