--- a/ui/users/wishlist.html
+++ b/ui/users/wishlist.html
@@ -102,7 +102,7 @@
       </tbody>
     </table>
     <div class="back-btn">
-      <a href="mypage.html">← 마이페이지로 돌아가기</a>
+      <a href="my_page.html">← 마이페이지로 돌아가기</a>
     </div>
   </div>
 </body>
